[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/UI.gd" type="Script" id=1]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 829.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="GatherWood" type="CheckButton" parent="Panel"]
margin_left = 10.0
margin_top = 9.0
margin_right = 187.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 133, 20 )
text = "Gather Wood"

[node name="GatherCrop" type="CheckButton" parent="Panel"]
margin_left = 10.0
margin_top = 52.0
margin_right = 187.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 133, 20 )
text = "Gather Crop"

[node name="CreatePlan" type="Button" parent="Panel"]
margin_left = 14.0
margin_top = 98.0
margin_right = 175.0
margin_bottom = 128.0
text = "Create AI Plan"

[connection signal="toggled" from="Panel/GatherWood" to="." method="_on_GatherWood_toggled"]
[connection signal="toggled" from="Panel/GatherCrop" to="." method="_on_GatherCrop_toggled"]
[connection signal="pressed" from="Panel/CreatePlan" to="." method="_on_CreatePlan_pressed"]
